yaml/depmain.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: main
  namespace: f1

spec:
  selector:
    matchLabels:
      app: main
  replicas: 1
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
      - name: main
        image: sab22/main:2
        ports:
        - containerPort: 80
