yaml/depmain2.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: main2
  namespace: f1

spec:
  selector:
    matchLabels:
      app: main2
  replicas: 1
  template:
    metadata:
      labels:
        app: main2
    spec:
      containers:
      - name: main2
        image: sab22/main2:1
        ports:
        - containerPort: 80
