yaml/deppy.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: py
  namespace: f1

spec:
  selector:
    matchLabels:
      app: py
  replicas: 1
  template:
    metadata:
      labels:
        app: py
    spec:
      containers:
      - name: py
        image: sab22/py:3
        ports:
        - containerPort: 80
