yaml/svchome.yaml


apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: home
  namespace: f1
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: home
status:
  loadBalancer: {}
