yaml/svcmain2.yaml


apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: main2
  namespace: f1
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: main2
status:
  loadBalancer: {}
