yaml/svcn0.yaml


apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: n0
  namespace: f1
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: n0
status:
  loadBalancer: {}
