yaml/svcpup.yaml


apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: pup
  namespace: f1
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: pup
status:
  loadBalancer: {}
