yaml/fad.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fad
  namespace: f1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /fad.php
spec:
  ingressClassName: nginx
  rules:
  - host: cp25.example.com
    http:
      paths:
      - path: /fad
        pathType: Prefix
        backend:
          service:
            name: fad
            port:
              number: 80
