yaml/home.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home
  namespace: f1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /home.php
spec:
  ingressClassName: nginx
  rules:
  - host: cp25.example.com
    http:
      paths:
      - path: /home
        pathType: Prefix
        backend:
          service:
            name: home
            port:
              number: 80
