yaml/main2.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main2
  namespace: f1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /main2.py
spec:
  ingressClassName: nginx
  rules:
  - host: cp25.example.com
    http:
      paths:
      - path: /main2
        pathType: Prefix
        backend:
          service:
            name: main2
            port:
              number: 80
