yaml/n0.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n0
  namespace: f1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /n0.js
spec:
  ingressClassName: nginx
  rules:
  - host: cp25.example.com
    http:
      paths:
      - path: /n0
        pathType: Prefix
        backend:
          service:
            name: n0
            port:
              number: 80
