yaml/pup.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pup
  namespace: f1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /pup.py
spec:
  ingressClassName: nginx
  rules:
  - host: cp25.example.com
    http:
      paths:
      - path: /pup
        pathType: Prefix
        backend:
          service:
            name: pup
            port:
              number: 80
