yaml/py.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: py
  namespace: f1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /py.py
spec:
  ingressClassName: nginx
  rules:
  - host: cp25.example.com
    http:
      paths:
      - path: /py
        pathType: Prefix
        backend:
          service:
            name: py
            port:
              number: 80
